--- a/requirements.txt
+++ b/requirements.txt
@@ -10,7 +10,10 @@ distlib==0.3.0
 distro==1.4.0
 dj-database-url==0.5.0
 Django==3.1.1
+django-appconf==1.0.4
+django-compressor==2.4
 django-filter==2.3.0
+django-libsass==0.8
 django-modelcluster==5.0.2
 django-taggit==1.3.0
 django-treebeard==4.3.1
@@ -23,6 +26,7 @@ idna==2.8
 ipaddr==2.2.0
 jdcal==1.4.1
 l18n==2018.5
+libsass==0.20.1
 lockfile==0.12.2
 msgpack==0.6.2
 openpyxl==3.0.5
@@ -34,8 +38,10 @@ psycopg2==2.8.5
 pyparsing==2.4.6
 pytoml==0.1.21
 pytz==2020.1
+rcssmin==1.0.6
 requests==2.22.0
 retrying==1.3.3
+rjsmin==1.1.0
 six==1.14.0
 soupsieve==2.0.1
 sqlparse==0.3.1
