--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ asgiref==3.2.10
 beautifulsoup4==4.8.2
 CacheControl==0.12.6
 certifi==2019.11.28
+cffi==1.14.2
 chardet==3.0.4
 colorama==0.4.3
 contextlib2==0.6.0
@@ -28,13 +29,17 @@ jdcal==1.4.1
 l18n==2018.5
 libsass==0.20.1
 lockfile==0.12.2
+milksnake==0.1.5
 msgpack==0.6.2
+numpy==1.19.1
+opencv-python==4.4.0.42
 openpyxl==3.0.5
 packaging==20.3
 pep517==0.8.2
 Pillow==7.2.0
 progress==1.5
 psycopg2==2.8.5
+pycparser==2.20
 pyparsing==2.4.6
 pytoml==0.1.21
 pytz==2020.1
@@ -42,6 +47,7 @@ rcssmin==1.0.6
 requests==2.22.0
 retrying==1.3.3
 rjsmin==1.1.0
+rustface==0.1.0
 six==1.14.0
 soupsieve==2.0.1
 sqlparse==0.3.1
